--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,7 +1,7 @@
 .App {
   display: block;
   text-align: center;
-  background: #fafafa;
+  background: #fff;
   height: 100%;
   min-height: 100%;
 }
