--- a/src/components/NewQuote/NewQuote.module.scss
+++ b/src/components/NewQuote/NewQuote.module.scss
@@ -11,8 +11,7 @@
 }
 
 .PdfCanvas {
-  max-width: 100%;
-  height: 100%;
-  min-height: 500px;
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  width: 100%;
+  height: auto;
+  overflow: auto;
 }
